@@ -220,6 +220,8 @@ S3method(print,SubsampleDesc)
 S3method(print,SupervisedTask)
 S3method(print,Task)
 S3method(print,TuneControl)
+S3method(print,TuneMultiCritControl)
+S3method(print,TuneMultiCritResult)
 S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
@@ -436,6 +438,9 @@ export(makeTuneControlGenSA)
 export(makeTuneControlGrid)
 export(makeTuneControlIrace)
 export(makeTuneControlRandom)
+export(makeTuneMultiCritControlGrid)
+export(makeTuneMultiCritControlNSGA2)
+export(makeTuneMultiCritControlRandom)
 export(makeTuneWrapper)
 export(makeUndersampleWrapper)
 export(makeWeightedClassesWrapper)
@@ -506,6 +511,7 @@ export(train.sqrt.of.mean)
 export(train.sum)
 export(trainLearner)
 export(tuneParams)
+export(tuneParamsMultiCrit)
 export(tuneThreshold)
 export(undersample)
 import(BBmisc)
