@@ -1,0 +1,9 @@
+tuneMultiCritRandom = function(learner, task, resampling, measures, par.set, control, opt.path, show.info) {
+  vals = sampleValues(n = control$extra.args$maxit, par = par.set, trafo = FALSE)
+  evalOptimizationStatesTune(learner, task, resampling, measures, par.set, control, opt.path,
+    show.info, vals, dobs = seq_along(vals), eols = NA_integer_, remove.nas = TRUE)
+  makeTuneMultiCritResultFromOptPath(learner, par.set, measures, control, opt.path)
+}
+
+
+
