@@ -1,0 +1,56 @@
+% Generated by roxygen2 (4.0.1): do not edit by hand
+\name{tuneParamsMultiCrit}
+\alias{tuneParamsMultiCrit}
+\title{Hyperparameter tuning for multiple measures at once.}
+\usage{
+tuneParamsMultiCrit(learner, task, resampling, measures, par.set, control,
+  show.info = getMlrOption("show.info"))
+}
+\arguments{
+\item{learner}{[\code{\link{Learner}} | \code{character(1)}]\cr
+The learner.
+If you pass a string the learner will be created via \code{\link{makeLearner}}.}
+
+\item{task}{[\code{\link{Task}}]\cr
+The task.}
+
+\item{resampling}{[\code{\link{ResampleInstance}} | \code{\link{ResampleDesc}}]\cr
+Resampling strategy to evaluate points in hyperparameter space. If you pass a description,
+it is instantiated once at the beginning by default, so all points are
+evaluated on the same training/test sets.
+If you want to change that behaviour, look at \code{\link{TuneControl}}.}
+
+\item{measures}{[list of \code{\link{Measure}} | \code{\link{Measure}}]\cr
+Performance measures to evaluate. The first measure, aggregated by the first aggregation function
+is optimized, others are simply evaluated.}
+
+\item{par.set}{[\code{\link[ParamHelpers]{ParamSet}}]\cr
+Collection of parameters and their constraints for optimization.}
+
+\item{control}{[\code{\link{TuneMultiCritControl}}]\cr
+Control object for search method. Also selects the optimization algorithm for tuning.}
+
+\item{show.info}{[\code{logical(1)}]\cr
+Print verbose output on console?
+Default is set via \code{\link{configureMlr}}.}
+}
+\value{
+[\code{\link{TuneMultiCritResult}}].
+}
+\description{
+Optimizes the hyperparameters of a learner.
+Allows for different optimization methods, such as grid search, evolutionary strategies, etc.
+You can select such an algorithm (and its settings)
+by passing a corresponding control object. For a complete list of implemented algorithms look at
+\code{\link{TuneMultiCritControl}}.
+}
+\seealso{
+Other tune_multicrit: \code{\link{TuneMultiCritControl}},
+  \code{\link{TuneMultiCritControlGrid}},
+  \code{\link{TuneMultiCritControlRandom}},
+  \code{\link{makeTuneMultiCritControlGrid}},
+  \code{\link{makeTuneMultiCritControlNSGA2}},
+  \code{\link{makeTuneMultiCritControlRandom}};
+  \code{\link{plotTuneMultiCritResult}}
+}
+
