@@ -1,0 +1,42 @@
+context("tuneParamsMultiCrit")
+
+test_that("tuneParamsMultiCrit", {
+  lrn =  makeLearner("classif.rpart")
+  rdesc = makeResampleDesc("Holdout")
+  ps = makeParamSet(
+    makeIntegerParam("minsplit", lower=1, upper = 50)
+  )
+  ctrl = makeTuneMultiCritControlRandom(maxit = 2)
+  expect_error(tuneParamsMultiCrit(lrn, binaryclass.task, rdesc, par.set = ps, measures = mmce, control = ctrl))
+
+  mycheck = function(res, k) {
+    expect_output(print(res), "Points on front")
+    expect_true(is.integer(res$ind))
+    expect_true(is.list(res$x))
+    expect_true(is.matrix(res$y))
+    expect_equal(getOptPathLength(res$opt.path), k)
+  }
+
+  # random search
+  ctrl = makeTuneMultiCritControlRandom(maxit = 2)
+  res = tuneParamsMultiCrit(lrn, binaryclass.task, rdesc, par.set = ps,
+    measures = list(tpr, fpr), control = ctrl)
+  mycheck(res, 2)
+  # and check plotting
+  plotTuneMultiCritResult(res, path = TRUE)
+  plotTuneMultiCritResult(res, path = FALSE)
+
+  # grid search
+  ctrl = makeTuneMultiCritControlGrid(resolution = 2L)
+  res = tuneParamsMultiCrit(lrn, binaryclass.task, rdesc, par.set = ps,
+    measures = list(tpr, fpr), control = ctrl)
+  mycheck(res, 2)
+
+  # nsga2
+  ctrl = makeTuneMultiCritControlNSGA2(popsize = 4L, generations = 1L)
+  res = tuneParamsMultiCrit(lrn, binaryclass.task, rdesc, par.set = ps,
+    measures = list(tpr, fpr), control = ctrl)
+  mycheck(res, 12L)
+})
+
+
